Temas de Navidad

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/img/pwa/nutria-chambeadora-192.png" />
+    <link rel="icon" href="/img/pwa/nutria-chambeadora-192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nutrias Chambeadoras</title>
   </head>
